--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -1,1 +1,12 @@
 require "bundler/gem_tasks"
+require "rake/testtask"
+
+namespace "test" do
+  desc "Run all unit tests"
+  Rake::TestTask.new(:units) do |t|
+    t.libs += ["test"]
+    t.test_files = Dir["test/*_test.rb"]
+    t.verbose = true
+  end
+end
+
